fix: scrollbar added to menu

--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -43,11 +43,16 @@ button:focus {
     top: 20px;
     left: 20px;
     border: none;
-    transition: .2s ease-in;
+    transition: .2s ease-in-out;
+}
+
+.hamburger-button:hover {
+    color: #51cd98;
 }
 
 .menu-open {
     left: 231px !important;
+    transform: rotate(90deg);
 }
 
 
@@ -172,7 +177,9 @@ button:focus {
     top: 0;
     bottom: 0;
     left: 0;
-    transition: .2s ease-in;
+    transition: .2s ease-in-out;
+    height: 100vh;
+    overflow-x: scroll;
 }
 
 .parent-form-main {
